--- a/Packages/UGF.Coroutines/package.json
+++ b/Packages/UGF.Coroutines/package.json
@@ -3,7 +3,7 @@
     "displayName": "UGF.Coroutines",
     "version": "0.0.0-preview",
     "unity": "2019.2",
-    "description": "No description.",
+    "description": "Provides custom implementation of the coroutines.",
     "author": {
         "name": "Unity Game Framework",
         "url": "https://github.com/unity-game-framework"
