--- a/Assets/UGF.Coroutines.Runtime.Tests/UGF.Coroutines.Runtime.Tests.asmdef
+++ b/Assets/UGF.Coroutines.Runtime.Tests/UGF.Coroutines.Runtime.Tests.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "UGF.Coroutines.Runtime.Tests",
+    "rootNamespace": "",
     "references": [
         "GUID:e98043744c06bce4b86b467be38834f3",
+        "GUID:d067af32d09350a4bb33960432735e4d",
         "GUID:27619889b8ba8c24980f49ee34dbb44a"
     ],
     "includePlatforms": [],
@@ -15,5 +17,6 @@
     "defineConstraints": [
         "UNITY_INCLUDE_TESTS"
     ],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": false
 }
