--- a/Packages/UGF.Coroutines/package.json
+++ b/Packages/UGF.Coroutines/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.ugf.coroutines",
   "displayName": "UGF.Coroutines",
-  "version": "1.0.0-preview.3",
+  "version": "1.0.0",
   "unity": "2021.2",
   "apiCompatibility": ".NET Standard 2.1",
   "description": "Provides utilities to work with Unity coroutines.",
